# systra

./: .clang-format  .clangd  .gitignore  CMakeLists.txt  LICENSE  README.md  go.mod
cmd/: main.go
pkg/init/: openrc.go  runit.go  systemd.go
pkg/initsys/: openrc.go  runit.go  systemd.go
pkg/tui/: models.go  styles.go  tui.go
pkg/util/: version.go
src/: main.cc
src/backend/: cpu.cc  cpu.hh  disk.cc  disk.hh  main.cc  memory.cc  memory.hh
src/include/: initui.hh
src/initui/: main.cpp
